--- a/lab09/package.json
+++ b/lab09/package.json
@@ -2,7 +2,7 @@
   "name": "photo-app-react",
   "version": "0.1.0",
   "homepage": "./",
-  "proxy": "https://photo-app-secured.herokuapp.com",
+  "proxy": "https://photo-app-secured.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
